# RALMO

./: .gitignore  README.md  pyproject.toml
configs/: default.yaml
src/cli/: __init__.py  run_engine.py
src/ralmo_core/: __init__.py  draft_selector.py  kv_manager.py  multi_draft_engine.py  orchestrator.py  policy.py  speculative.py
src/ralmo_core/models/: __init__.py  base_model.py  draft_model.py  target_model.py
src/ralmo_core/utils/: __init__.py  logger.py  power_monitor.py  rapl_backend.py
tests/: conftest.py  test_external_verifier.py  test_kv_manager.py  test_multi_draft.py  test_orchestrator.py  test_policy.py  test_power_monitor.py  test_speculative.py
